--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@500&display=swap');
+
+body {
+  margin: 0;
+  background-color: rgb(11, 12, 30);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  position: absolute;
+  border-radius: 80%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.ticktack {
+  color: aliceblue;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 100px;
+  position: absolute;
+  top: 200px;
+  left: 550px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.container ::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(-45deg, #7529f8 0%, #ff0f7b 100%);
+  transform: translate3d(0, 10px, 0) scale(1.2);
+  filter: blur(70px);
+  opacity: var(0.8);
+  transition: opacity 0.3s;
+  border-radius: inherit;
+  animation: blobby 5s infinite ease;
+}
+
+.container ::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  border-radius: inherit;
+}
+
+@keyframes blobby {
+  0% {
+    transform: translate3d(0px, 10px, 0) scale(1.2);
   }
-  to {
-    transform: rotate(360deg);
+  20% {
+    transform: translate3d(0px, 10px, 0) scale(0.9);
+  }
+  40% {
+    transform: translate3d(0px, 20px, 0) scale(1);
+  }
+  60% {
+    transform: translate3d(0px, 10px, 0) scale(1.4);
+  }
+  40% {
+    transform: translate3d(0px, 20px, 0) scale(1);
+  }
+  20% {
+    transform: translate3d(0px, 10px, 0) scale(0.9);
+  }
+  0% {
+    transform: translate3d(0px, 10px, 0) scale(1.2);
   }
 }
